--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,10 @@ ext {
 
     pandora = "com.github.whataa:pandora:v2.0.5"
     pandoraNoOp = "com.github.whataa:pandora-no-op:v2.0.3"
-    appcompat = "com.android.support:appcompat-v7:$supportLibraryVersion"
-    design = "com.android.support:design:$supportLibraryVersion"
-    multidex = 'com.android.support:multidex:1.0.3'
-    constraintLayout = 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    appcompat = "androidx.appcompat:appcompat:1.1.0"
+    multidex = "androidx.multidex:multidex:2.0.0"
+    coreKtx = "androidx.core:core-ktx:1.1.0"
 
     lottie = 'com.airbnb.android:lottie:2.7.0'
     //阿里
@@ -103,7 +103,7 @@ ext {
     buglyNativecrashreport = 'com.tencent.bugly:nativecrashreport:3.3.1'
 
     //图片选择器
-    glide = 'com.github.bumptech.glide:glide:4.5.0'
+    glide = 'com.github.bumptech.glide:glide:4.10.0'
 
     rxpermissions = 'com.github.tbruyelle:rxpermissions:0.10.2'
     eventbus = 'org.greenrobot:eventbus:3.1.1'
