--- a/component/build.gradle
+++ b/component/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api rootProject.ext.appcompat
     api rootProject.ext.multidex
-    api rootProject.ext.design
+    api rootProject.ext.glide
     api rootProject.ext.amapLoc
     api rootProject.ext.amapSearch
     api rootProject.ext.amapNavi
